added wireframe directory and uploaded first wireframe png for this project

--- a/Projects/Project_One/Golf_Card_Game/golf.css/style.css
+++ b/Projects/Project_One/Golf_Card_Game/golf.css/style.css
@@ -1,3 +1,13 @@
 body {
   background-color: black;
 }
+
+body:after {
+    content:"";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    border-left: 3px dotted #FF0000; /*change these values to suit your liking*/
+}
