--- a/Projects/Project_One/Golf_Card_Game/golf.css/style.css
+++ b/Projects/Project_One/Golf_Card_Game/golf.css/style.css
@@ -1,5 +1,44 @@
+* {
+     -moz-box-sizing: border-box; /* Firexfox */
+     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+     box-sizing: border-box; /* IE */
+}
+
+/* Clear fix hack */
+.clearfix:after {
+     content: ".";
+     display: block;
+     clear: both;
+     visibility: hidden;
+     line-height: 0;
+     height: 0;
+}
+
+.clear {
+	clear: both;
+}
+
+/*.alignright {
+	float: right;
+	padding: 0 0 10px 10px; /* note the padding around a right floated image */
+}
+
+/*.alignleft {
+	float: left;
+	padding: 0 10px 10px 0; /* note the padding around a left floated image */
+}
+
+
+/*-----------------------------------------------------------------------------
+BASE STYLE
+-----------------------------------------------------------------------------*/
+
+
 body {
   background-color: black;
+  position: relative;
+  line-height: 1.7em;
+  z-index: 0;
 }
 
 body:after {
@@ -9,5 +48,23 @@ body:after {
     top: 0;
     bottom: 0;
     left: 50%;
-    border-left: 3px dotted #FF0000; /*change these values to suit your liking*/
+    border-left: 3px dotted #FF0000;
+    /*overflow: hidden;*/
+}
+
+header {
+    height: 25%;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    border: 2px solid white;
+    text-align: center;
+    font-size: 50px;
+    color: red;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    align-items: center;
+    position: relative;
+    background-color: black;
+    z-index: 50;
 }
