--- a/Projects/Project_One/hilow_card_game/css_dir/style.css
+++ b/Projects/Project_One/hilow_card_game/css_dir/style.css
@@ -1,13 +1,156 @@
-/*#start {
-  margin-top: 20px;
-
-}
-
-#highLow {
-  display: none;
-}*/
-
 
 body {
   background-color: rgb(210,210,210);
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+h1{
+  color: red;
+  background-color: black;
+  height: 115px;
+  width: 100%;
+  margin: 0 auto;
+  position: absolute;
+  text-align: center;
+  padding-top: 65px;
+  top: 0;
+
+}
+
+.container {
+  /*top-padding: 300px;
+  top: 300px;*/
+  margin: 0 auto;
+  width: 100%;
+  height: 100%
+  position: relative;
+  flex-wrap: wrap;
+  /*display: run-in;*/
+
+
+}
+
+#message {
+  height: 110px;
+  width: 100%;
+  margin-top: 175px;
+  background-color: red;
+  font-weight: bolder;
+  font-size: 28px;
+  margin-right: 0;
+  padding-top: 10px;
+  padding-right: 0px;
+  text-align: center;
+  position: absolute;
+
+
+}
+#highLow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+
+
+}
+
+button#btnstart.btn {
+  position: relative;
+  /*align-items: center;
+  align-self: center;*/
+  display:inline-block;
+  margin-top: 300px;
+  padding: 10px 25px;
+  text-align: center;
+  height: 85px;
+  width: 180px;
+  margin-left: 45%;
+  background-color: #fbf6f7;
+  border-radius: 10px;
+  border: 3px solid rgba(189, 47, 47, 0.57);
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+button#btnlow.btn {
+  position: absolute;
+  /*align-items: center;
+  align-self: center;*/
+  display: inline-block;
+  margin-top: 200px;
+  padding: 10px 25px;
+  text-align: center;
+  height: 50px;
+  width: 130px;
+  margin-left: 65%;
+  background-color: #8e8a8a;
+  border-radius: 10px;
+  justify-content: center;
+  border: 3px solid rgba(99, 11, 11, 0.43);
+  font-size: 24px;
+  font-weight: bolder;
+
+  }
+
+button#btnhigh.btn {
+  position: absolute;
+  /*align-items: center;
+  align-self: center;*/
+  display: inline-block;
+  margin-top: 200px;
+  padding: 10px 25px 12px 25px;
+  text-align: center;
+  height: 50px;
+  width: 130px;
+  margin-left: 35%;
+  background-color: rgba(255, 0, 0, 0.51);
+  border-radius: 10px;
+  justify-content: center;
+  border: 3px solid rgba(82, 62, 62, 0.6);
+  font-size: 24px;
+  font-weight: bolder;
+
+  }
+
+
+#highLow{
+  /*display:none;*/
+  display: none;
+}
+
+span.icard{
+  height: 125px;
+  width: 100px;
+  padding: 1.75em .75em;
+  /*padding-bottom: 2em;*/
+  margin-top: 0px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border: 5px solid rgba(95, 20, 20, 0.45);
+
+  text-align: center;
+  justify-content: space-around;
+  font-size: 35px;
+  background-color: white;
+  flex-flow: row;
+  border-radius: .25em;
+  z-index: 2;
+  border-style: outset;
+  /*align-content: center;*/
+
+
+}
+
+#cards{
+  /*margin-top: 310px;*/
+  height: 600x;
+  width: 600px;
+  padding-top: 450px;
+  top: 400px;
+  flex-wrap: wrap;
+
 }
